fix: text aligment and spacing

--- a/src/components/CourseCard/CourseCard.module.css
+++ b/src/components/CourseCard/CourseCard.module.css
@@ -2,12 +2,35 @@
   max-width: 280px;
   position: relative;
 }
+
+.cardContent {
+  padding-top: 20px;
+  padding-bottom: 55px;
+}
+
 .card {
   position: relative;
 }
 
 .icons {
+  display: inline;
   color: #666666;
+  vertical-align: middle;
+}
+
+.semesterText {
+  /* font-family: 'inner'; */
+  color: #8896ac;
+}
+
+.memberNBuddiesText {
+  padding-top: 15px;
+}
+
+.text {
+  display: inline;
+
+  vertical-align: text-top;
 }
 
 .tickIcon {
